Fix: css overflow update

--- a/src/pages/ConfigList.css
+++ b/src/pages/ConfigList.css
@@ -1,6 +1,6 @@
 .list-wrapper {
   display: flex;
-  overflow: hi;
+  overflow: hidden;
 }
 
 .config-list {
